testsuite/tests/properties/invalid_dflt_arg_override/missing_default.lkt
import common

class FooNode implements Node[FooNode] {
    @export @abstract fun prop(a: Bool=true): Bool
}

class Example: FooNode {
    fun prop(a: Bool): Bool = a
}
